DM-109 開發「依設備、日期、課別(特定時分)取得生產指標」的API